[gd_scene load_steps=6 format=3 uid="uid://d0vo15nm7cknt"]

[ext_resource type="Texture2D" uid="uid://hdecqnuqw2uh" path="res://art/itens/cortinaAberta_1.png" id="1_ex7jj"]
[ext_resource type="Script" path="res://cortina.gd" id="1_xcxo7"]
[ext_resource type="Texture2D" uid="uid://x7c3mpnkwebl" path="res://art/itens/cortinaFechada_1.png" id="2_5bdco"]
[ext_resource type="Texture2D" uid="uid://d4agkej45ks67" path="res://Prototipos/chave.png" id="2_bxdys"]
[ext_resource type="AudioStream" uid="uid://l706vhko44c4" path="res://Sounds/SFX/Barulho de Chave.wav" id="5_tfbgw"]

[node name="Cortina" type="Area2D"]
script = ExtResource("1_xcxo7")

[node name="Chave" type="Sprite2D" parent="."]
position = Vector2(127, 437)
rotation = -0.389208
scale = Vector2(0.407975, 0.66)
texture = ExtResource("2_bxdys")

[node name="Collision_Chave" type="CollisionPolygon2D" parent="."]
position = Vector2(127, 437)
rotation = 1.16588
scale = Vector2(2.5, 4.045)
polygon = PackedVector2Array(-6.9333, 8.11525, 5.98723, 8.31021, 6.93329, -8.11525, -6.3549, -8.4076)

[node name="Cortina_aberta" type="Sprite2D" parent="."]
visible = false
position = Vector2(176, 308)
texture = ExtResource("1_ex7jj")

[node name="Cortina_fechada" type="Sprite2D" parent="."]
position = Vector2(209, 279)
texture = ExtResource("2_5bdco")

[node name="Collision_Cortina" type="CollisionPolygon2D" parent="."]
position = Vector2(218, 278)
scale = Vector2(30, 30)
polygon = PackedVector2Array(-4.13333, -9.26667, -3.3, 8.96667, -0.533334, 8.6, 1.23333, 6.5, 2.43333, 3.3, 1.03333, 1.1, 0.266666, -4.56667, 0.6, -9.26667)

[node name="Chave2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tfbgw")

[connection signal="input_event" from="." to="." method="_on_input_event"]
